test-suite/cases/eure-schema-to-json-schema/errors/hole-type.eure
unimplemented = true

// Test error: Hole type cannot be converted to JSON Schema

schema = ```eure
= `!`
```

json_schema_errors[] = "Hole"
